--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -14,7 +14,6 @@
 	</ui:define>
 	<ui:define name="content">
 		<b:saveState value="#{freelancerBackingBean}"/>	
-		<b:saveState value="#{profileBackingBean}"/>
 		<b:title title="Freiberufler - Stammdaten"/>
 		<f:subview binding="#{freelancerBackingBean.data.viewRoot}">
 			<b:gridBagLayout id="x" rows="p,10" cols="100,p">
@@ -413,7 +412,7 @@
 									<h:column>
 										<b:gridBagLayout cols="220,160,220" rows="20,p,p">
 											<b:cell x="2" y="2" align="center">
-												<h:commandLink title="Profil öffnen" onclick="#{freelancerBackingBean.profileOpenCommand}">
+												<h:commandLink title="#{row.infotext}" onclick="#{freelancerBackingBean.profileOpenCommand}" >
 													<b:image source="/images/word.gif" rendered="#{row.wordProfile}"/>
 													<b:image source="/images/textfile.png" rendered="#{row.textProfile}"/>
 												</h:commandLink>
