--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermain.xhtml
@@ -32,7 +32,7 @@
 			<b:gridBagLayout cols="400,10,400" rows="30,10,1,p" id="menu">
 				<b:cell x="1" y="1" width="3">
 					<b:titledBox label="Menu">
-						<b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,80,50,20,10,20,right:*"
+						<b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,20,20,80,50,20,10,20,right:*"
 							rows="20,2,20">
 							<b:cell x="1" y="1">
 								<b:commandLink title="Erster Datensatz" action="#{partnerBackingBean.commandFirst}">
@@ -88,20 +88,27 @@
 										reRender="#{partnerBackingBean.data.changedComponents}" />
 								</b:commandLink>
 							</b:cell>
-							<b:cell x="12" y="1" valign="middle" align="right">
+							<b:cell x="13" y="1">
+								<b:commandLink title="Neues Projekt erfassen" action="#{partnerBackingBean.commandNewProject}">
+									<b:image source="/images/newproject.gif" />
+									<a4j:support event="onclick"
+										reRender="#{partnerBackingBean.data.changedComponents}" />
+								</b:commandLink>
+							</b:cell>
+							<b:cell x="14" y="1" valign="middle" align="right">
 								<b:label id="gehezu" label="Gehe zu #"/>
 							</b:cell>
-							<b:cell x="13" y="1" >
+							<b:cell x="15" y="1" >
 								<b:numberinputfield id="recordnumber" labelComponentId="gehezu" value="#{partnerBackingBean.data.recordNumber}"/>
 							</b:cell>
-							<b:cell x="14" y="1">
+							<b:cell x="16" y="1">
 								<b:commandLink title="Springe zu Datensatz" action="#{partnerBackingBean.commandJumpToRecord}">
 									<b:image source="/images/search.gif" />
 									<a4j:support event="onclick"
 										reRender="#{partnerBackingBean.data.changedComponents}" />
 								</b:commandLink>
 							</b:cell>
-							<b:cell x="16" y="1">
+							<b:cell x="17" y="1">
 								<a4j:outputPanel ajaxRendered="true">
 									<b:commandLink rendered="#{!empty partnerBackingBean.data.originalFreelancer}" title="Zurück zum Freelancer" action="#{partnerBackingBean.commandJumpToFreelancer}" immediate="true">
 										<b:image source="/images/back.gif" />
@@ -110,13 +117,13 @@
 								</a4j:outputPanel>
 							</b:cell>
 							
-							<b:cell x="17" y="1" align="right">
+							<b:cell x="19" y="1" align="right">
 								<a4j:outputPanel ajaxRendered="true">
 									<h:outputText value="#{partnerBackingBean.recordInfo}"/>
 								</a4j:outputPanel>
 							</b:cell>
 							
-							<b:cell x="12" y="3" align="right" width="6">
+							<b:cell x="12" y="3" align="right" width="9">
 								<a4j:outputPanel ajaxRendered="true">
 									<h:outputText value="#{partnerBackingBean.data.entity}">
 										<f:converter converterId="auditInformationConverter" />
