--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/style/mogwailayout.css
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/style/mogwailayout.css
@@ -363,6 +363,11 @@
 	left: 10px;
 }
 
+.mogwaiLink {
+	color: black;
+	text-decoration: none;
+}
+
 body {
   background-color:white; 
   margin-left:0px; 
